# savanna

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: main.yml
example/: CMakeLists.txt  cert.hpp  main.cpp
example/async_client/: CMakeLists.txt  main.cpp
example/async_websocket/: CMakeLists.txt  main.cpp
example/client/: CMakeLists.txt  cert.hpp  echo_server.py  main.cpp  simple_client
example/reuse_async_client/: CMakeLists.txt  main.cpp
example/websocket/: CMakeLists.txt  main.cpp  simple_ws
example/websocket/server/: index.html  index.js  package.json
include/: savanna.hpp
include/savanna/: async_url_session.hpp  async_websocket.hpp  constant.hpp  endpoint.hpp  request.hpp  result.hpp  reuse_async_url_session.hpp  url.hpp  url_session.hpp  util.hpp  websocket.hpp
